--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-<img src="https://raw.githubusercontent.com/lastguest/lastguest/master/cozy-room.gif" alt="" width="100%" loading="lazy" decoding="async" />
+<style>
+  body {
+    width: 1226px;
+    margin: 0 auto;
+    background-color: black;
+  }
+</style>
 <img alt="github stats" src="https://pixel-profile.vercel.app/api/github-stats?username=lastguest&screen_effect=true&show_rank=false&include_all_commits=true" loading="lazy" decoding="async">
+<img src="https://raw.githubusercontent.com/lastguest/lastguest/master/cozy-room.gif" alt="" width="100%" loading="lazy" decoding="async" />
